# rs-query

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: audit.yml
src/: lib.rs  main.rs
src/data_source/: csv_data_source.rs  in_memory_data_source.rs  mod.rs
src/datasource/: csv_data_source.rs  in_memory_data_source.rs  mod.rs
src/datatypes/: arrow_field_vector.rs  arrow_types.rs  arrow_vector_builder.rs  column_vector.rs  literal_value_vector.rs  mod.rs  record_batch.rs  schema.rs
src/execution/: mod.rs
src/logical_plan/: aggregate.rs  data_frame.rs  expression_types.rs  expressions.rs  limit.rs  logical_expr.rs  mod.rs  projection.rs  scan.rs  selection.rs
src/logical_plan/expressions/: aggr_expr.rs  binary_expr.rs  literal_expr.rs  math_expr.rs  mod.rs  unary_expr.rs
src/optimizer/: mod.rs  projection_push_down_rule.rs
src/physical_plan/: hash_aggregate_exec.rs  mod.rs  projection_exec.rs  scan_exec.rs  selection_exec.rs
src/physical_plan/expressions/: aggregate_expression.rs  binary_expression.rs  boolean_expression.rs  cast_expression.rs  column_expression.rs  math_expression.rs  max_expression.rs  min_expression.rs  mod.rs  sum_expression.rs
src/query_planner/: mod.rs
src/sql_planner/: mod.rs
tests/: integration_tests.rs
