[package]
name = "rquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] # lib
path = "src/lib.rs"

# can be removed if only lib crate. Integration testing is done in test directory not in main
[[bin]] # bin to run HelloWorld
name = "rquery"
path = "src/main.rs"


[dependencies]
arrow = "49.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13"
tracing = { version = "0.1", features = ["log"] }
csv = "1.3.0"
anyhow = "1.0.86"