[package]
name = "rs-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] # lib
path = "src/lib.rs"

# can be removed if only lib crate. Integration testing is done in test directory not in main
[[bin]] # bin to run HelloWorld
name = "rs_query"
path = "src/main.rs"


[dependencies]
arrow = "52.0.0"
config = "0.14.0"
tracing = { version = "0.1", features = ["log"] }
csv = "1.3.0"
anyhow = "1.0.86"
sqlparser = "0.47.0"